[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaspora-mcp"
version = "0.1.1"
description = "Kenya diaspora services via MCP — immigration, dual citizenship, diaspora taxes, homeland investment, community. 6 tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
diaspora-mcp = "diaspora_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
