[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaspora-mcp"
version = "0.1.2"
description = "Kenya diaspora services via MCP — immigration, dual citizenship, diaspora taxes, homeland investment, community. 6 tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
diaspora-mcp = "diaspora_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/gabrielmahia/diaspora-mcp"
Documentation = "https://github.com/gabrielmahia/nairobi-stack"
"MCP Registry" = "https://registry.modelcontextprotocol.io"
Datasets = "https://huggingface.co/gmahia"
Evaluation = "https://github.com/gabrielmahia/kipimo"
[tool.setuptools.packages.find]
where = ["src"]
